<resources>
    <string name="app_name">pj-mvp</string>
    <string name="action_settings">Settings</string>
    <string name="topic_failure">获取话题失败</string>
    <string name="is_loading">正在加载</string>
    <string name="finish_loading">加载完成</string>
    <string name="home">首页</string>
    <string name="magazine">专辑</string>
    <string name="topic">话题</string>
    <string name="message">消息</string>
    <string name="profile">个人主页</string>
    <string name="settings">设置</string>
</resources>
